@@ -44,7 +44,9 @@ typedef enum {
 	DEVICE_TYPE_OPENCL_ALL = DEVICE_TYPE_OPENCL_DEFAULT |
 		DEVICE_TYPE_OPENCL_CPU | DEVICE_TYPE_OPENCL_GPU |
 		DEVICE_TYPE_OPENCL_UNKNOWN,
-	DEVICE_TYPE_ALL = DEVICE_TYPE_NATIVE | DEVICE_TYPE_OPENCL_ALL
+	DEVICE_TYPE_ALL = DEVICE_TYPE_NATIVE | DEVICE_TYPE_OPENCL_ALL,
+	DEVICE_TYPE_ALL_HARDWARE = DEVICE_TYPE_OPENCL_ALL,
+	DEVICE_TYPE_ALL_INTERSECTION = DEVICE_TYPE_NATIVE | DEVICE_TYPE_OPENCL_ALL,
 } DeviceType;
 
 class DeviceDescription {
