@@ -67,6 +67,9 @@ class Accelerator;
 class BBox;
 class Context;
 class DataSet;
+class Device;
+class DeviceDescription;
+class HardwareDevice;
 class IntersectionDevice;
 class Mesh;
 class Matrix4x4;
