@@ -17,6 +17,7 @@
 * Added the support for the new IslandAOV shape
 * Added the support for RandomTriangleAOV shape
 * Accelerated duplicate vertex detection in pointiness shape (from 6.7 seconds to 0.016 seconds on a 100k vertex mesh)
+* LuxRays API reworked to support generic hardware devices (now OpenCL, potentially CUDA, Vulkan, Metal, etc.)
 
 ### Fixed Bugs
 
